  AbstractServer, IllegalArgumentException replaced with IllegalStateException in a couple of places
  AbstractServer, bug fixed, added user authentication when retrieving an existing connection
  Database.Type enum introduced
  Sonar run
  Build file refactoring, publish split into install and deploy, local m2 repository added to ivysettings
  Ant build dependency management set up
  Build target dist renamed to package
  DateInputPanel.setDate() added
  EntityEditPanel, EntityUiUtil, createTextArea() minor signature changes
  EntityPanel.createEditControlPanel() added
  FilteredComboBoxModel.addSelectionListener() now takes EventInfoListener as parameter
  SelectionModel.addSelectedIndexListener() now takes EventInfoListener as parameter
  SelectionModel.addSelectedItemsListener() added along with remove
  SelectionModel.addSelectedItemListener() added along with remove
  Some ivysettings.xml improvement
  Usages of Util.rejectNullValue() and Util.equal() replaced with Objects.requireNonNull() and Objects.equals() respectively
  Util.rejectNullValue() and equal() removed
  org.jminor.common.model.Util broken up into TextUtil, PreferencesUtil and FormatUtil, rest moved to common.Util
  StateObserver.addActivateListener() and addDeactivateListener() removed
  ServerUtil.resolveTrustStoreFromClasspath() refactored
  Util.getArray/CollectionContentsAsString() moved to TextUtil
0.10.4
  Source updated to Java 8
  TextUtil.padString() now uses Alignment enum instead of boolean switch
  TextUtil.getDelimitedString() bug fixed
  <code></code> replaced with {@code } in javadoc
  ServerMonitor, thread stats not cleared on reset
0.10.5
  EntityConnectionServer refactoring, access to admin interface moved to the server itself with user authentication
  DefaultEntityConnectionServer refactoring continued, Configuration.SERVER_ADMIN_PORT reintroduced
  Server monitor, added framework-db-remote module to dependencies due to the above