@@ -4292,3 +4292,4 @@
   EntityConnectionServer refactoring, access to admin interface moved to the server itself with user authentication
   DefaultEntityConnectionServer refactoring continued, Configuration.SERVER_ADMIN_PORT reintroduced
   Server monitor, added framework-db-remote module to dependencies due to the above
+  SwingEntityTableModel, replaceEntitiesByKey() no longer calls filterContents()
